--- a/index.html
+++ b/index.html
@@ -381,9 +381,9 @@
 
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
               <div class="service-item item-cyan position-relative">
-                <i class="bi bi-camera-video-fill icon"></i>
+                <i class="bi bi-laptop icon"></i>
                 <div>
-                  <h3>Promo Terbatas Kelas Online 🤩</h3>
+                  <h3>Promo Spesial Kelas Online! 🎉</h3>
                   <p>Nikmati kelas bersama mentor professional dengan peserta terbatas selama sebulan! Dengan garansi pasti bisa!</p>
                   <a href="https://api.whatsapp.com/send?phone=6285162992597&text=Haloo%20kak%20saya%20tertarik%20dengan%20*PROMO*%20program%20kelas%20online%20*via%20zoom*%2C%20boleh%20diinfokan%20lebih%20lanjut%0A%0A%0A%60%60%60dari%20ig%2Ftiktok%2Fx%2Ffb%60%60%60" class="read-more stretched-link" target="__blank">Contact Admin <i class="bi bi-arrow-right"></i></a>
                 </div>
@@ -394,7 +394,7 @@
               <div class="service-item item-orange position-relative">
                 <i class="bi bi-people-fill icon"></i>
                 <div>
-                  <h3>Seat Hampir Habis (Kelas Offline) 🫨</h3>
+                  <h3>Hampir Terisi Penuh (Kelas Offline)! 🚨</h3>
                   <p>Dibimbing secara langsung dari ahlinya, fokus latihan dan setiap kali latihan selalu ada evaluasi hingga mahir</p>
                   <a href="https://api.whatsapp.com/send?phone=6285162992597&text=Haloo%20kak%20apakah%20seat%20kelas%20offline-nya%20masih%20ada%3F%20boleh%20diinfokan%20lebih%20lanjut%0A%0A%0A%60%60%60dari%20ig%2Ftiktok%2Fx%2Ffb%60%60%60" class="read-more stretched-link" target="__blank">Contact Admin <i class="bi bi-arrow-right"></i></a>
                 </div>
@@ -483,11 +483,11 @@
                     <div class="testimonial-wrap">
                       <div class="testimonial-item">
                         <img
-                          src="https://lh3.googleusercontent.com/a-/ALV-UjUerRQXePjqRfQdV18KNpbPS4slNXhSflUWVgOTgV0ImQ=w72-h72-p-rp-mo-br100"
+                          src="https://lh3.googleusercontent.com/a-/ALV-UjWF1tefWYu4m__YVKgZvNpr7cw_HWeUCwsZD4da1O-J6lrSwdzQ=w120-h120-p-rp-mo-br100"
                           class="testimonial-img"
                           alt=""
                         />
-                        <h3>Maysarah</h3>
+                        <h3>Nestri Prabandani</h3>
                         <h4>
                           <i class="bi bi-star-fill"></i>
                           <i class="bi bi-star-fill"></i>
@@ -497,12 +497,7 @@
                         </h4>
                         <p>
                           <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                          Terima Kasih kepada dialogika dan juga mentor saya
-                          yakni Panji Arya, selama belajar di sini selalu di
-                          beri tantangan sehingga membuat saya juga makin banyak
-                          dapat pengalaman dan juga pembelajaran baru untuk
-                          public speaking terlebih kelasnya sangat enjoy,
-                          pokoknya keren
+                          Satu bulan lalu saya mengikuti private class dialogika di Solo dgn tutor Kak Indri. Tutor sangat baik dan ramah. Sabar juga mengajari saya cara public speaking. Dari dialogika saya bisa lebih merasa PD, sudah mengurangi rasa grogi, dan yang …
                           <i
                             class="bx bxs-quote-alt-right quote-icon-right"
                           ></i>
@@ -516,11 +511,11 @@
                     <div class="testimonial-wrap">
                       <div class="testimonial-item">
                         <img
-                          src="https://lh3.googleusercontent.com/a-/ALV-UjUEw8d2W9pLUIDTodoFHwwIjhoLrxtkUA0LqFKfnrAmSLBV=w72-h72-p-rp-mo-br100"
+                          src="https://lh3.googleusercontent.com/a-/ALV-UjWx25rr5kelvH7tUWG7rP32kkVpWTWMAI4xn14pqxu9djyKfhfNOQ=w120-h120-p-rp-mo-br100"
                           class="testimonial-img"
                           alt=""
                         />
-                        <h3>Ahda Syifa</h3>
+                        <h3>Ratna Yulianti</h3>
                         <h4>
                           <i class="bi bi-star-fill"></i>
                           <i class="bi bi-star-fill"></i>
@@ -530,13 +525,7 @@
                         </h4>
                         <p>
                           <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                          seneng banget bisa ikut kelas disini, kelasnya seru
-                          dan menarik serta mentornya juga asik kebetulan dapet
-                          mentor kak fany dan mentor lain juga pasti ga kalah
-                          serunya. dapet banyak ilmu yang sangat membantu
-                          meningkatkan public speaking dan bikin makin pede,
-                          jadwal kelasnya juga fleksibel. sangat sangat worth it
-                          ikut kelas disini
+                          Baru saja selesai mengikuti class disini, dari sisi umur saya lah yang paling tua hahaha, tapi tidak menyurutkan semangat saya untuk belajar kelas public speaking demi menunjang karir saya. class yang sangat menyenangkan disetiap sesinya, …
                           <i
                             class="bx bxs-quote-alt-right quote-icon-right"
                           ></i>
@@ -550,11 +539,11 @@
                     <div class="testimonial-wrap">
                       <div class="testimonial-item">
                         <img
-                          src="https://lh3.googleusercontent.com/a-/ALV-UjWRAop2NAYOnPSO-FF8T6ubTHKs4F2JrUoMA3qZ1CqKcw=w72-h72-p-rp-mo-br100"
+                          src="https://lh3.googleusercontent.com/a-/ALV-UjWUENEr-55CljB80GNXKDHyOfFK8qlA-ZTgYZsrFxQuWxbFH2Oa=w120-h120-p-rp-mo-br100"
                           class="testimonial-img"
                           alt=""
                         />
-                        <h3>Qistina Arifadini</h3>
+                        <h3>Dinara Salsabilla</h3>
                         <h4>
                           <i class="bi bi-star-fill"></i>
                           <i class="bi bi-star-fill"></i>
@@ -564,14 +553,7 @@
                         </h4>
                         <p>
                           <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                          Setelah mengikuti kelas public speaking di dialogika
-                          ini saya dapat banyak hal baru, mulai dari cara self
-                          branding, presentasi, dan berlatih menjadi mc. Mentor
-                          saya yaitu kak aditya sangat baik dan selalu
-                          menyebarkan positive vibes. Jadwalnya juga sangat
-                          fleksibel mengikuti dengan jadwal pesertanya. sangat
-                          worth it mengikuti kursus public speaking di
-                          dialogika!
+                          Salah satu tempat kursus public speaking yang bagus sekali, saya mengambil private class online, jadi pertemuannya dilakukan via zoom meeting. Mentor yang mengajar sangat ramah dan seru, membuat saya tidak bosan selama kelas berlangsung, …
                           <i
                             class="bx bxs-quote-alt-right quote-icon-right"
                           ></i>
@@ -585,11 +567,11 @@
                     <div class="testimonial-wrap">
                       <div class="testimonial-item">
                         <img
-                          src="https://lh3.googleusercontent.com/a-/ALV-UjVKsGynC7YR1LttqNOp1kT7KiE7j3u5qDE79oy7bZzgJls=w72-h72-p-rp-mo-br100"
+                          src="https://lh3.googleusercontent.com/a-/ALV-UjUrrUkVNex9ZIC8I9-L6RR-KwPEZKL-7BXmUtbJNoIw4EBzTlYxBg=w120-h120-p-rp-mo-br100"
                           class="testimonial-img"
                           alt=""
                         />
-                        <h3>Annissa Ibtisamah</h3>
+                        <h3>Raihan Anargha</h3>
                         <h4>
                           <i class="bi bi-star-fill"></i>
                           <i class="bi bi-star-fill"></i>
@@ -599,9 +581,7 @@
                         </h4>
                         <p>
                           <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                          tempat yang cocok belajar public speaking bagi pemula,
-                          mentornya ramah dan tidak membosankan. sangat
-                          recommended!! sukses selalu dialogika
+                          Saya memilih Dialogika karena metode pengajaran yang interaktif dan fokus pada pengembangan kemampuan berbicara di depan umum. Dialogika menawarkan lingkungan belajar yang mendukung, instruktur yang berpengalaman, dan materi yang dirancang …
                           <i
                             class="bx bxs-quote-alt-right quote-icon-right"
                           ></i>
@@ -1390,9 +1370,8 @@
       <!-- End Gallery Section -->
 
       <!-- Venue Section -->
-      <section id="venue" class="venue section">
+      <section id="venue" class="venue section" style="padding: 0;">
         <!-- Section Title -->
-
         <div
           class="container-fluid"
           data-aos="fade-up"
