Update Icon dan Pesan Promo

--- a/index.html
+++ b/index.html
@@ -504,11 +504,9 @@
                       <div class="testimonial-item">
                         <img
                           src="https://lh3.googleusercontent.com/a-/ALV-UjWF1tefWYu4m__YVKgZvNpr7cw_HWeUCwsZD4da1O-J6lrSwdzQ=w75-h75-p-rp-mo-br100"
-                          src="https://lh3.googleusercontent.com/a-/ALV-UjWF1tefWYu4m__YVKgZvNpr7cw_HWeUCwsZD4da1O-J6lrSwdzQ=w120-h120-p-rp-mo-br100"
                           class="testimonial-img"
                           alt=""
                         />
-                        <h3>Nestri Prabandani</h3>
                         <h3>Nestri Prabandani</h3>
                         <h4>
                           <i class="bi bi-star-fill"></i>
@@ -518,12 +516,7 @@
                           <i class="bi bi-star-fill"></i>
                         </h4>
                         <p>
-                          <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                          Satu bulan lalu saya mengikuti private class dialogika di Solo dgn tutor Kak Indri. Tutor sangat baik dan ramah. Sabar juga mengajari saya cara public speaking. Dari dialogika saya bisa lebih merasa PD, sudah mengurangi rasa grogi, dan yang paling penting sudah bisa mengatur kalimat dengan baik jika diharuskan <span class="dots">...</span><span class="readMore"> Read More &raquo;</span><span class="moreText">berbicara di dpn umum secara spontan. Sangat2 recommended buat teman2 lain yg ingin belajar mengimprove public speakingnya ❤️</span><span class="readLess"> &laquo; Read Less</span>
                           Satu bulan lalu saya mengikuti private class dialogika di Solo dgn tutor Kak Indri. Tutor sangat baik dan ramah. Sabar juga mengajari saya cara public speaking. Dari dialogika saya bisa lebih merasa PD, sudah mengurangi rasa grogi, dan yang …
-                          <i
-                            class="bx bxs-quote-alt-right quote-icon-right"
-                          ></i>
                         </p>
                       </div>
                     </div>
@@ -540,7 +533,6 @@
                           alt=""
                         />
                         <h3>Ratna Yulianti</h3>
-                        <h3>Ratna Yulianti</h3>
                         <h4>
                           <i class="bi bi-star-fill"></i>
                           <i class="bi bi-star-fill"></i>
@@ -549,13 +541,7 @@
                           <i class="bi bi-star-fill"></i>
                         </h4>
                         <p>
-                          <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                          Baru saja selesai mengikuti class disini, dari sisi umur saya lah yang paling tua hahaha, tapi tidak menyurutkan semangat saya untuk belajar kelas public speaking demi menunjang karir saya. class yang sangat menyenangkan disetiap sesinya, belajar ilmu public speaking yang dapat menambah kepercayaan diri.<span class="dots">...</span><span class="readMore"> Read More &raquo;</span>
-                          <span class="moreText">Disini lah tempat dimana kita tidak malu untuk melakukan kesalahan. trima kasih untuk semua tim dialogika dan khususnya untuk mba fany mentor kami yang selalu ceria dalam membersamai kami selama kami belajar di dialogika, atas ilmu yang diberikan. Semoga semakin sukses  kedepannya</span><span class="readLess"> &laquo; Read Less</span>
-                          Baru saja selesai mengikuti class disini, dari sisi umur saya lah yang paling tua hahaha, tapi tidak menyurutkan semangat saya untuk belajar kelas public speaking demi menunjang karir saya. class yang sangat menyenangkan disetiap sesinya, …
-                          <i
-                            class="bx bxs-quote-alt-right quote-icon-right"
-                          ></i>
+                          Satu bulan lalu saya mengikuti private class dialogika di Solo dgn tutor Kak Indri. Tutor sangat baik dan ramah. Sabar juga mengajari saya cara public speaking. Dari dialogika saya bisa lebih merasa PD, sudah mengurangi rasa grogi, dan yang …
                         </p>
                       </div>
                     </div>
@@ -572,7 +558,6 @@
                           alt=""
                         />
                         <h3>Dinara Salsabilla</h3>
-                        <h3>Dinara Salsabilla</h3>
                         <h4>
                           <i class="bi bi-star-fill"></i>
                           <i class="bi bi-star-fill"></i>
@@ -581,13 +566,7 @@
                           <i class="bi bi-star-fill"></i>
                         </h4>
                         <p>
-                          <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                          Salah satu tempat kursus public speaking yang bagus sekali, saya mengambil private class online, jadi pertemuannya dilakukan via zoom meeting. Mentor yang mengajar sangat ramah dan seru, membuat saya tidak bosan selama kelas berlangsung, materi dijelaskan dengan sangat baik dan mudah dipahami.<span class="dots">...</span><span class="readMore"> Read More &raquo;</span><span class="moreText"> Selain itu, mentor juga selalu mendengarkan kesulitan saya terkait public speaking.
-                          Terima kasih dialogika dan miss Malla yang sudah memberikan saya ilmu selama 7 kali pertemuan kemarin 🙏🏻🙏🏻</span><span class="readLess"> &laquo; Read Less</span>
                           Salah satu tempat kursus public speaking yang bagus sekali, saya mengambil private class online, jadi pertemuannya dilakukan via zoom meeting. Mentor yang mengajar sangat ramah dan seru, membuat saya tidak bosan selama kelas berlangsung, …
-                          <i
-                            class="bx bxs-quote-alt-right quote-icon-right"
-                          ></i>
                         </p>
                       </div>
                     </div>
@@ -598,12 +577,12 @@
                     <div class="testimonial-wrap">
                       <div class="testimonial-item">
                         <img
-                          src="https://lh3.googleusercontent.com/a-/ALV-UjXdLXa4DjiqQXM-3Xjc7Wu_5P1IS0klsTQcC-RVDBtBEgy7X_k4=w75-h75-p-rp-mo-br100"
                           src="https://lh3.googleusercontent.com/a-/ALV-UjUrrUkVNex9ZIC8I9-L6RR-KwPEZKL-7BXmUtbJNoIw4EBzTlYxBg=w120-h120-p-rp-mo-br100"
+                        
                           class="testimonial-img"
                           alt=""
                         />
-                        <h3>Hatta Saifa</h3>
+                        
                         <h3>Raihan Anargha</h3>
                         <h4>
                           <i class="bi bi-star-fill"></i>
@@ -613,14 +592,7 @@
                           <i class="bi bi-star-fill"></i>
                         </h4>
                         <p>
-                          <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                          Public Speaking Class yang bisa dihadiri offline di Jogja, saya menjadi peserta kelas reguler di sini dan pengalaman saya selama menjadi peserta kelas alhamdulillah dipertemukan dengan kak vanny as a coach/mentor yang menyenangkan dan selalu antusias dalam berbagi ilmunya sebagai seorang expertise pub speaker. <span class="dots">...</span><span class="readMore"> Read More &raquo;</span><span class="moreText">Para pegawai yang ada di daheim pun  ramah-ramah juga dalam menyambut tiap peserta kelas. Overall menyenangkan dan membantu juga dalam memperdalam ilmu pub speaking dengan guarantee nya yang bisa tetap mengikuti kelas meskipun sudah dinyatakan lulus.
-                          Sedikit saran kalau ada yg perlu diperbaiki adalah mungkin pengadaaan kelas terpisah dengan ruang kerja para karyawan intern supaya para peserta kelas bisa lebih maksimal dalam menyerap ilmu yang disampaikan, juga responsibilitas admin kelas dalam menanggapi peserta kelas bisa lebih ditingkatkan, but overall sudah sangat cukup membantuu
-                          Thanks and good job buat kak vanny dan kaka-kaka Dialogika semuanyaa</span><span class="readLess"> &laquo; Read Less</span>
                           Saya memilih Dialogika karena metode pengajaran yang interaktif dan fokus pada pengembangan kemampuan berbicara di depan umum. Dialogika menawarkan lingkungan belajar yang mendukung, instruktur yang berpengalaman, dan materi yang dirancang …
-                          <i
-                            class="bx bxs-quote-alt-right quote-icon-right"
-                          ></i>
                         </p>
                       </div>
                     </div>
