--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Todays Promo</h2>
+          <h2>Todays Promo  </h2>
           <ol>
             <li><a href="../index.html">Home</a></li>
             <li>Promo</li>
@@ -391,7 +391,7 @@
 
         <!-- Section Title -->
         <div class="container section-title" data-aos="fade-up">
-          <h2>Todays Promo! 🎉</h2>
+          <h2>Todays Promo! 🎁</h2>
           <p>Jangan lewatkan promo kelas dan info-info event dari Dialogika</p>
         </div><!-- End Section Title -->
 
@@ -516,7 +516,9 @@
                           <i class="bi bi-star-fill"></i>
                         </h4>
                         <p>
-                          Satu bulan lalu saya mengikuti private class dialogika di Solo dgn tutor Kak Indri. Tutor sangat baik dan ramah. Sabar juga mengajari saya cara public speaking. Dari dialogika saya bisa lebih merasa PD, sudah mengurangi rasa grogi, dan yang …
+                          <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                          Satu bulan lalu saya mengikuti private class dialogika di Solo dgn tutor Kak Indri. Tutor sangat baik dan ramah. Sabar juga mengajari saya cara public speaking. Dari dialogika saya bisa lebih merasa PD, sudah mengurangi rasa grogi, dan yang … <i
+                          class="bx bxs-quote-alt-right quote-icon-right"></i>
                         </p>
                       </div>
                     </div>
@@ -541,7 +543,9 @@
                           <i class="bi bi-star-fill"></i>
                         </h4>
                         <p>
-                          Satu bulan lalu saya mengikuti private class dialogika di Solo dgn tutor Kak Indri. Tutor sangat baik dan ramah. Sabar juga mengajari saya cara public speaking. Dari dialogika saya bisa lebih merasa PD, sudah mengurangi rasa grogi, dan yang …
+                          <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                          Satu bulan lalu saya mengikuti private class dialogika di Solo dgn tutor Kak Indri. Tutor sangat baik dan ramah. Sabar juga mengajari saya cara public speaking. Dari dialogika saya bisa lebih merasa PD, sudah mengurangi rasa grogi, dan yang … <i
+                          class="bx bxs-quote-alt-right quote-icon-right"></i>
                         </p>
                       </div>
                     </div>
@@ -566,7 +570,9 @@
                           <i class="bi bi-star-fill"></i>
                         </h4>
                         <p>
-                          Salah satu tempat kursus public speaking yang bagus sekali, saya mengambil private class online, jadi pertemuannya dilakukan via zoom meeting. Mentor yang mengajar sangat ramah dan seru, membuat saya tidak bosan selama kelas berlangsung, …
+                          <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                          Salah satu tempat kursus public speaking yang bagus sekali, saya mengambil private class online, jadi pertemuannya dilakukan via zoom meeting. Mentor yang mengajar sangat ramah dan seru, membuat saya tidak bosan selama kelas berlangsung, … <i
+                          class="bx bxs-quote-alt-right quote-icon-right"></i>
                         </p>
                       </div>
                     </div>
@@ -592,7 +598,10 @@
                           <i class="bi bi-star-fill"></i>
                         </h4>
                         <p>
-                          Saya memilih Dialogika karena metode pengajaran yang interaktif dan fokus pada pengembangan kemampuan berbicara di depan umum. Dialogika menawarkan lingkungan belajar yang mendukung, instruktur yang berpengalaman, dan materi yang dirancang …
+                          <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                          Saya memilih Dialogika karena metode pengajaran yang interaktif dan fokus pada pengembangan kemampuan berbicara di depan umum. Dialogika menawarkan lingkungan belajar yang mendukung, instruktur yang berpengalaman, dan materi yang dirancang … <i
+                          class="bx bxs-quote-alt-right quote-icon-right"
+                        ></i>
                         </p>
                       </div>
                     </div>
