--- a/index.html
+++ b/index.html
@@ -454,9 +454,9 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjW6ylRm6OZ3mC8fTeYBDpf9Rr_NO3LFm2dCDHEhK9xve-NoZiQ=w75-h75-p-rp-mo-br100"
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjWOYa8kdS8RkKxKvszftDzypIIlTBG1FC5NKwofV63t6zA8j9f1=w66-h66-p-rp-mo-br100"
                         class="testimonial-img" alt="" />
-                      <h3>Mika Julia Conzizca</h3>
+                      <h3>Dewi Apriliani</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
@@ -466,8 +466,7 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        Highly recommended, lots of new knowledge can be gained from dialogics. Thank you dialog,
-                        hopefully dialogue will continue to develop<i
+                        My children have just finished taking an offline public speaking class at Dialogica Bintaro. So happy to have discovered Dialogica. Ka Pitta as a mentor is very professional and can understand the dynamics of the world of teenagers. The children's progress is very good, especially in increasing their self-confidence and courage to speak and express ideas/opinions well. In the current era of the independent curriculum, I think soft skills such as public speaking are really needed by children, because they are required to learn actively, explore, discuss and present the results of their learning. In summary, the children enjoy studying here & I as a parent feel satisfied with the children's progress. Thank you Dialogica & team 😊<i
                           class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
@@ -479,9 +478,9 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjUYrzuXeysU9Ed6jU29givBZEKH45DyeEBF50Pqk4es-R6Xaad_=w75-h75-p-rp-mo-br100"
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjXSYH6lkcGCoaONDy13X9o_RHB0ZJ2uYHT16Ydrlq_K2jiolkQ=w66-h66-p-rp-mo-br100"
                         class="testimonial-img" alt="" />
-                      <h3>Maritza sharliz (disya)</h3>
+                      <h3>Lebre Adrianto</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
@@ -491,9 +490,7 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        The material is ok, the ppt is ok and up to date. His older brother is also kind, understanding,
-                        detailed, non-judgmental. It's worth trying because if we practice it will tell us what the
-                        shortcomings are so we can introspect <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                        Im very interse with the course and enjoy event the course begin until end… Thx Dialogika <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
                   </div>
@@ -504,9 +501,9 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjVu5lm1DwyAkqpjlFOVVALKFAuRm7mT2bweLDJKdzSCrEYwL-lW=w75-h75-p-rp-mo-br100"
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjUZ7wE9u9V6MJLK-Mic-0dbYeLR4qDP70ZJgz9KJ60biRg8pJ_w=w66-h66-p-rp-mo-br100"
                         class="testimonial-img" alt="" />
-                      <h3>Arya Y Darmawan</h3>
+                      <h3>Khoirun Nisa Alfaini</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
@@ -516,9 +513,7 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        The public speaking class provided practical techniques to enhance confidence and communication
-                        skills. The instructor was engaging, offering personalized feedback. Overall, the course was
-                        well-structured, equipping participants with essential presenta … <i
+                        The class can be a safe space for learning public speaking. Not only did you get the material, but you also got to practice directly with other friends. The instructors are also open to discussions, get lots of tips related to public speaking.<i
                           class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
@@ -530,10 +525,10 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjUrrUkVNex9ZIC8I9-L6RR-KwPEZKL-7BXmUtbJNoIw4EBzTlYxBg=w120-h120-p-rp-mo-br100"
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjUdvvXYFkGraSQtOEEGisFaOq_Tu042Pl69lgD9M_LW3zLO4cG0=w66-h66-p-rp-mo-br100"
                         class="testimonial-img" alt="" />
 
-                      <h3>Raihan Anargha</h3>
+                      <h3>Fabian Rafi Ridwan</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
@@ -543,9 +538,7 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        Saya memilih Dialogika karena metode pengajaran yang interaktif dan fokus pada pengembangan
-                        kemampuan berbicara di depan umum. Dialogika menawarkan lingkungan belajar yang mendukung,
-                        instruktur yang berpengalaman, dan materi yang dirancang … <i
+                        Keren sih dengan mengikuti kelas dialogika saya bisa mendapatkan pengalaman baru dan menjadikan saya sebagai pribadi yang lebih confidence. Tetap semangat bagi kakak"nya 👍🏻👍🏻 …<i
                           class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
